--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,99 +1,102 @@
 name: CI
-on: [push, pull_request]
+on: [ pull_request, push, workflow_dispatch ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  REGEX_ANSI_COLOR: 's/\x1b\[[0-9;]*[mGKHF]//g'
+  REGEX_MAKE_OUTPUT: '/^g*make\[1]: \(Enter\|Leav\)ing directory ''/d'
+
+permissions: {}
+
 jobs:
-  build-linux:
-    runs-on: ubuntu-22.04  # Use the default runner without a custom Docker container
+  check-uid:
+    name: Check Vial UIDs
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libusb-1.0-0-dev libudev-dev ruby ruby-dev rubygems build-essential desktop-file-utils wget unzip zlib1g-dev liblzma-dev libssl-dev git imagemagick file libfuse2
-        wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
-        unzip *.zip
-        sudo gem install --no-document fpm
-    - name: Set up Python 3.6
-      run: ./util/setup_python36.sh
-    - name: Setup venv
-      run: |
-        ./util/python36/prefix/bin/python3 -m venv venv
-        . venv/bin/activate
-        pip install -r requirements.txt
-    - name: Build
-      run: |
-        . venv/bin/activate
-        fbs freeze
-        fbs installer
-        deactivate
-        ./pkg2appimage-*/pkg2appimage misc/Vial.yml
-        mv out/Vial-*.AppImage out/Vial-x86_64.AppImage
-    - uses: actions/upload-artifact@v4
+    - name: (actions) Checkout Vial repo
+      uses: actions/checkout@v4
       with:
-        name: vial-linux
-        path: out/Vial-x86_64.AppImage
-  build-mac:
-    runs-on: macos-14  # Updated from deprecated macos-11
+        persist-credentials: false
+
+    - name: Verify Vial UID is unique per-keyboard
+      run: python3 util/ci_vial_verify_uid.py
+
+  build-default:
+    name: Build default keymaps for Vial
+    runs-on: ubuntu-latest
+    container: ghcr.io/qmk/qmk_cli@sha256:2dc05fc9f32efebd6b05c2b8676ee548358bc7e151e9dbf4dac6b6eed4513b07 
+    env:
+      KEYMAP: default
+
     steps:
-    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
-    - uses: actions/setup-python@v5  # Much simpler than manual download
+    - name: (actions) Checkout Vial repo
+      uses: actions/checkout@v4
       with:
-        python-version: '3.10.x'  # Minimum version available on macOS 14 ARM64
-    - name: Upgrade pip
-      run: |
-        python -m pip install --upgrade pip setuptools wheel     
-    - name: Setup venv
-      run: |
-        python3 -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
+        persist-credentials: false
+        submodules: recursive
+
     - name: Build
+      id: build
       run: |
-        source venv/bin/activate
-        fbs freeze
-        hdiutil create -volname Vial -srcfolder "target/Curlton KeyStation.app" -ov -format UDZO vial-mac.dmg
-    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
-      with:
-        name: vial-mac
-        path: vial-mac.dmg
-  build-win:
-    runs-on: windows-latest
+        git config --global --add safe.directory $(pwd)
+        if ! qmk mass-compile -j $(nproc) $(qmk find -km vial | sed "s/:vial$/:${KEYMAP}/");
+          then
+          echo "::error::$(ls -1 .build/failed.log.* | wc -l) keymaps failed to build. See logs and/or job summary for details."
+          exit 1
+        fi
+
+    - name: Dump failure logs
+      if: ${{ failure() && steps.build.conclusion == 'failure' }}
+      run: |
+        echo '### Failure logs' | tee -a "${GITHUB_STEP_SUMMARY}"
+
+        cd .build || exit 1
+        for log in failed.log.*; do
+          pretty_logname="$(echo "${log}" | sed "s/^failed\.log\.[0-9]\+\.// ; s/\.${KEYMAP}$//")"
+
+          printf '\n::group::%s\n%s\n::endgroup::\n' "${pretty_logname}" "$(sed "${REGEX_MAKE_OUTPUT}" < "${log}")"
+          printf '\n<details>\n<summary>%s</summary>\n\n```\n%s\n```\n\n</details>\n' \
+             "${pretty_logname}" "$(sed "${REGEX_MAKE_OUTPUT} ; ${REGEX_ANSI_COLOR}" < "${log}")" >> "${GITHUB_STEP_SUMMARY}"
+        done
+
+  build-vial:
+    name: Build Vial keymaps
+    runs-on: ubuntu-latest
+    container: ghcr.io/qmk/qmk_cli@sha256:2dc05fc9f32efebd6b05c2b8676ee548358bc7e151e9dbf4dac6b6eed4513b07 
+    env:
+      KEYMAP: vial
+
     steps:
-    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
-    
-    # Install Visual C++ redistributables to fix msvcr100.dll missing error
-    - name: Install Visual C++ Redistributables
-      run: |
-        choco install vcredist2010 vcredist2012 -y
-      shell: powershell
-    
-    - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
+    - name: (actions) Checkout Vial repo
+      uses: actions/checkout@v4
       with:
-        python-version: '3.6.x'
-    - name: Setup venv
-      run: |
-        python -m venv venv
-        . .\venv\Scripts\activate.ps1
-        pip install -r requirements.txt
-    - name: Install NSIS
-      run: |
-        Invoke-WebRequest "https://github.com/vial-kb/vial-deps/releases/download/v1/nsis-3.06.1-setup.exe" -UserAgent "wget" -OutFile nsis-3.06.1-setup.exe
-        if ((Get-FileHash nsis-3.06.1-setup.exe -Algorithm sha256).Hash -ne "f60488a676308079bfdf6845dc7114cfd4bbff47b66be4db827b89bb8d7fdc52") { Write-Error 'SHA256 mismatch' }
-        Start-Process -FilePath "nsis-3.06.1-setup.exe" -ArgumentList "/S", "/D=C:\Program Files (x86)\NSIS" -NoNewWindow -Wait
+        persist-credentials: false
+        submodules: recursive
+
     - name: Build
+      id: build
       run: |
-        . .\venv\Scripts\activate.ps1
-        fbs freeze
-        Compress-Archive -Path "target\Curlton KeyStation" -DestinationPath vial-win.zip
-    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
-      with:
-        name: vial-win
-        path: vial-win.zip
-    - name: Create installer
+        git config --global --add safe.directory $(pwd)
+        if ! qmk mass-compile -km "${KEYMAP}" -j $(nproc);
+          then
+          echo "::error::$(ls -1 .build/failed.log.* | wc -l) keymaps failed to build. See logs and/or job summary for details."
+          exit 1
+        fi
+
+    - name: Dump failure logs
+      if: ${{ failure() && steps.build.conclusion == 'failure' }}
       run: |
-        $env:Path += ";C:\Program Files (x86)\NSIS"
-        . .\venv\Scripts\activate.ps1
-        fbs installer
-    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
-      with:
-        name: vial-win-installer
-        path: target\Curlton KeyStationSetup.exe
+        echo '### Failure logs' | tee -a "${GITHUB_STEP_SUMMARY}"
+
+        cd .build || exit 1
+        for log in failed.log.*; do
+          pretty_logname="$(echo "${log}" | sed "s/^failed\.log\.[0-9]\+\.// ; s/\.${KEYMAP}$//")"
+
+          printf '\n::group::%s\n%s\n::endgroup::\n' "${pretty_logname}" "$(sed "${REGEX_MAKE_OUTPUT}" < "${log}")"
+          printf '\n<details>\n<summary>%s</summary>\n\n```\n%s\n```\n\n</details>\n' \
+            "${pretty_logname}" "$(sed "${REGEX_MAKE_OUTPUT} ; ${REGEX_ANSI_COLOR}" < "${log}")" >> "${GITHUB_STEP_SUMMARY}"
+        done
